[NewMe] init pie chart

--- a/NewMe/homepage.ui
+++ b/NewMe/homepage.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1011</width>
+    <width>1110</width>
     <height>557</height>
    </rect>
   </property>
@@ -24,7 +24,7 @@
     <rect>
      <x>0</x>
      <y>-1</y>
-     <width>1011</width>
+     <width>1081</width>
      <height>561</height>
     </rect>
    </property>
@@ -411,19 +411,36 @@ background-color: rgb(243, 243, 243);</string>
        <widget class="QTabWidget" name="tabWidget">
         <property name="geometry">
          <rect>
-          <x>-6</x>
-          <y>10</y>
+          <x>0</x>
+          <y>0</y>
           <width>331</width>
           <height>551</height>
          </rect>
         </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="currentIndex">
-         <number>1</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="tab">
          <attribute name="title">
           <string>Tab 1</string>
          </attribute>
+         <widget class="QWidget" name="verticalLayoutWidget_6">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>10</y>
+            <width>311</width>
+            <height>501</height>
+           </rect>
+          </property>
+          <layout class="QVBoxLayout" name="statLayout"/>
+         </widget>
         </widget>
         <widget class="QWidget" name="tab_2">
          <attribute name="title">
