--- a/NewMe/homepage.ui
+++ b/NewMe/homepage.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1110</width>
-    <height>557</height>
+    <width>906</width>
+    <height>554</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -24,7 +24,7 @@
     <rect>
      <x>0</x>
      <y>-1</y>
-     <width>1081</width>
+     <width>900</width>
      <height>561</height>
     </rect>
    </property>
@@ -33,7 +33,7 @@
      <rect>
       <x>-1</x>
       <y>-1</y>
-      <width>1011</width>
+      <width>891</width>
       <height>561</height>
      </rect>
     </property>
@@ -47,9 +47,9 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>6</y>
-          <width>321</width>
-          <height>541</height>
+          <y>76</y>
+          <width>280</width>
+          <height>471</height>
          </rect>
         </property>
         <property name="widgetResizable">
@@ -60,11 +60,97 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>319</width>
-           <height>539</height>
+           <width>278</width>
+           <height>469</height>
           </rect>
          </property>
         </widget>
+       </widget>
+       <widget class="QWidget" name="verticalLayoutWidget_7">
+        <property name="geometry">
+         <rect>
+          <x>7</x>
+          <y>10</y>
+          <width>281</width>
+          <height>65</height>
+         </rect>
+        </property>
+        <layout class="QVBoxLayout" name="verticalLayout_4">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_7">
+           <item>
+            <widget class="QCheckBox" name="sortBy">
+             <property name="text">
+              <string>Ascending</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_7">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <widget class="QLabel" name="label">
+             <property name="text">
+              <string>Sort By</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QComboBox" name="fileterSort"/>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_5">
+           <item>
+            <widget class="QLabel" name="label_2">
+             <property name="text">
+              <string>Type :</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QComboBox" name="filterType"/>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_6">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <widget class="QLabel" name="showTotsl">
+             <property name="text">
+              <string>Total : </string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
        </widget>
       </widget>
      </item>
@@ -88,7 +174,7 @@
          <rect>
           <x>9</x>
           <y>9</y>
-          <width>321</width>
+          <width>281</width>
           <height>541</height>
          </rect>
         </property>
@@ -116,7 +202,7 @@ background-color: rgb(243, 243, 243);</string>
              <rect>
               <x>10</x>
               <y>450</y>
-              <width>301</width>
+              <width>261</width>
               <height>22</height>
              </rect>
             </property>
@@ -129,7 +215,7 @@ background-color: rgb(243, 243, 243);</string>
              <rect>
               <x>10</x>
               <y>420</y>
-              <width>301</width>
+              <width>261</width>
               <height>23</height>
              </rect>
             </property>
@@ -151,7 +237,7 @@ background-color: rgb(243, 243, 243);</string>
              <rect>
               <x>10</x>
               <y>180</y>
-              <width>301</width>
+              <width>261</width>
               <height>221</height>
              </rect>
             </property>
@@ -183,7 +269,7 @@ background-color: rgb(243, 243, 243);</string>
              <rect>
               <x>130</x>
               <y>50</y>
-              <width>181</width>
+              <width>141</width>
               <height>111</height>
              </rect>
             </property>
@@ -252,7 +338,7 @@ background-color: rgb(243, 243, 243);</string>
              <rect>
               <x>10</x>
               <y>10</y>
-              <width>301</width>
+              <width>261</width>
               <height>41</height>
              </rect>
             </property>
@@ -353,7 +439,7 @@ background-color: rgb(243, 243, 243);</string>
              <rect>
               <x>-1</x>
               <y>0</y>
-              <width>321</width>
+              <width>281</width>
               <height>51</height>
              </rect>
             </property>
@@ -413,12 +499,12 @@ background-color: rgb(243, 243, 243);</string>
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>331</width>
+          <width>300</width>
           <height>551</height>
          </rect>
         </property>
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
+         <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
@@ -435,7 +521,7 @@ background-color: rgb(243, 243, 243);</string>
            <rect>
             <x>10</x>
             <y>10</y>
-            <width>311</width>
+            <width>271</width>
             <height>501</height>
            </rect>
           </property>
