--- a/NewMe/homepage.ui
+++ b/NewMe/homepage.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>906</width>
+    <width>924</width>
     <height>554</height>
    </rect>
   </property>
@@ -24,7 +24,7 @@
     <rect>
      <x>0</x>
      <y>-1</y>
-     <width>900</width>
+     <width>921</width>
      <height>561</height>
     </rect>
    </property>
@@ -33,7 +33,7 @@
      <rect>
       <x>-1</x>
       <y>-1</y>
-      <width>891</width>
+      <width>921</width>
       <height>561</height>
      </rect>
     </property>
@@ -48,7 +48,7 @@
          <rect>
           <x>10</x>
           <y>76</y>
-          <width>280</width>
+          <width>281</width>
           <height>471</height>
          </rect>
         </property>
@@ -60,7 +60,7 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>278</width>
+           <width>279</width>
            <height>469</height>
           </rect>
          </property>
@@ -178,7 +178,7 @@
          <rect>
           <x>9</x>
           <y>9</y>
-          <width>281</width>
+          <width>301</width>
           <height>541</height>
          </rect>
         </property>
@@ -206,7 +206,7 @@ background-color: rgb(243, 243, 243);</string>
              <rect>
               <x>10</x>
               <y>450</y>
-              <width>261</width>
+              <width>271</width>
               <height>22</height>
              </rect>
             </property>
@@ -219,7 +219,7 @@ background-color: rgb(243, 243, 243);</string>
              <rect>
               <x>10</x>
               <y>420</y>
-              <width>261</width>
+              <width>281</width>
               <height>23</height>
              </rect>
             </property>
@@ -241,7 +241,7 @@ background-color: rgb(243, 243, 243);</string>
              <rect>
               <x>10</x>
               <y>180</y>
-              <width>261</width>
+              <width>271</width>
               <height>221</height>
              </rect>
             </property>
@@ -271,9 +271,9 @@ background-color: rgb(243, 243, 243);</string>
            <widget class="QWidget" name="verticalLayoutWidget_5">
             <property name="geometry">
              <rect>
-              <x>130</x>
+              <x>120</x>
               <y>50</y>
-              <width>174</width>
+              <width>170</width>
               <height>111</height>
              </rect>
             </property>
@@ -284,7 +284,7 @@ background-color: rgb(243, 243, 243);</string>
                 <widget class="QLabel" name="label_4">
                  <property name="font">
                   <font>
-                   <pointsize>11</pointsize>
+                   <pointsize>10</pointsize>
                    <bold>true</bold>
                   </font>
                  </property>
@@ -308,7 +308,7 @@ background-color: rgb(243, 243, 243);</string>
                 <widget class="QLabel" name="label_3">
                  <property name="font">
                   <font>
-                   <pointsize>11</pointsize>
+                   <pointsize>10</pointsize>
                    <bold>true</bold>
                   </font>
                  </property>
@@ -342,7 +342,7 @@ background-color: rgb(243, 243, 243);</string>
              <rect>
               <x>10</x>
               <y>10</y>
-              <width>261</width>
+              <width>271</width>
               <height>41</height>
              </rect>
             </property>
@@ -443,7 +443,7 @@ background-color: rgb(243, 243, 243);</string>
              <rect>
               <x>-1</x>
               <y>0</y>
-              <width>281</width>
+              <width>291</width>
               <height>51</height>
              </rect>
             </property>
@@ -503,18 +503,18 @@ background-color: rgb(243, 243, 243);</string>
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>300</width>
+          <width>301</width>
           <height>551</height>
          </rect>
         </property>
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+         <sizepolicy hsizetype="Fixed" vsizetype="Minimum">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="currentIndex">
-         <number>0</number>
+         <number>1</number>
         </property>
         <widget class="QWidget" name="tab">
          <attribute name="title">
@@ -523,9 +523,9 @@ background-color: rgb(243, 243, 243);</string>
          <widget class="QWidget" name="verticalLayoutWidget_6">
           <property name="geometry">
            <rect>
-            <x>10</x>
+            <x>0</x>
             <y>10</y>
-            <width>271</width>
+            <width>291</width>
             <height>501</height>
            </rect>
           </property>
@@ -539,13 +539,16 @@ background-color: rgb(243, 243, 243);</string>
          <widget class="QWidget" name="verticalLayoutWidget">
           <property name="geometry">
            <rect>
-            <x>-1</x>
-            <y>-1</y>
-            <width>394</width>
+            <x>0</x>
+            <y>0</y>
+            <width>291</width>
             <height>521</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout">
+           <property name="sizeConstraint">
+            <enum>QLayout::SetDefaultConstraint</enum>
+           </property>
            <item>
             <widget class="QCalendarWidget" name="calendarWidget">
              <property name="sizePolicy">
@@ -554,10 +557,23 @@ background-color: rgb(243, 243, 243);</string>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
+             <property name="maximumSize">
+              <size>
+               <width>350</width>
+               <height>16777215</height>
+              </size>
+             </property>
              <property name="font">
               <font>
-               <pointsize>7</pointsize>
+               <pointsize>6</pointsize>
+               <stylestrategy>PreferDefault</stylestrategy>
               </font>
+             </property>
+             <property name="gridVisible">
+              <bool>true</bool>
+             </property>
+             <property name="verticalHeaderFormat">
+              <enum>QCalendarWidget::NoVerticalHeader</enum>
              </property>
             </widget>
            </item>
@@ -572,10 +588,10 @@ background-color: rgb(243, 243, 243);</string>
              <widget class="QScrollArea" name="scrollArea_2">
               <property name="geometry">
                <rect>
-                <x>10</x>
+                <x>0</x>
                 <y>0</y>
-                <width>311</width>
-                <height>291</height>
+                <width>291</width>
+                <height>311</height>
                </rect>
               </property>
               <property name="widgetResizable">
@@ -586,17 +602,17 @@ background-color: rgb(243, 243, 243);</string>
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>309</width>
-                 <height>289</height>
+                 <width>289</width>
+                 <height>309</height>
                 </rect>
                </property>
                <widget class="QWidget" name="verticalLayoutWidget_3">
                 <property name="geometry">
                  <rect>
-                  <x>9</x>
+                  <x>0</x>
                   <y>0</y>
                   <width>291</width>
-                  <height>281</height>
+                  <height>321</height>
                  </rect>
                 </property>
                 <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -620,50 +636,18 @@ background-color: rgb(243, 243, 243);</string>
                    <property name="frameShadow">
                     <enum>QFrame::Raised</enum>
                    </property>
-                   <widget class="QWidget" name="horizontalLayoutWidget_3">
+                   <widget class="QLabel" name="inMonth">
                     <property name="geometry">
                      <rect>
-                      <x>-1</x>
-                      <y>-1</y>
-                      <width>291</width>
-                      <height>41</height>
+                      <x>120</x>
+                      <y>0</y>
+                      <width>63</width>
+                      <height>51</height>
                      </rect>
                     </property>
-                    <layout class="QHBoxLayout" name="horizontalLayout_3">
-                     <item>
-                      <spacer name="horizontalSpacer_3">
-                       <property name="orientation">
-                        <enum>Qt::Horizontal</enum>
-                       </property>
-                       <property name="sizeHint" stdset="0">
-                        <size>
-                         <width>40</width>
-                         <height>20</height>
-                        </size>
-                       </property>
-                      </spacer>
-                     </item>
-                     <item>
-                      <widget class="QLabel" name="inMonth">
-                       <property name="text">
-                        <string>TextLabel</string>
-                       </property>
-                      </widget>
-                     </item>
-                     <item>
-                      <spacer name="horizontalSpacer_2">
-                       <property name="orientation">
-                        <enum>Qt::Horizontal</enum>
-                       </property>
-                       <property name="sizeHint" stdset="0">
-                        <size>
-                         <width>40</width>
-                         <height>20</height>
-                        </size>
-                       </property>
-                      </spacer>
-                     </item>
-                    </layout>
+                    <property name="text">
+                     <string>TextLabel</string>
+                    </property>
                    </widget>
                   </widget>
                  </item>
@@ -678,7 +662,7 @@ background-color: rgb(243, 243, 243);</string>
                       <x>0</x>
                       <y>0</y>
                       <width>287</width>
-                      <height>230</height>
+                      <height>270</height>
                      </rect>
                     </property>
                     <widget class="QWidget" name="verticalLayoutWidget_4">
@@ -687,7 +671,7 @@ background-color: rgb(243, 243, 243);</string>
                        <x>-1</x>
                        <y>-1</y>
                        <width>291</width>
-                       <height>231</height>
+                       <height>261</height>
                       </rect>
                      </property>
                      <layout class="QVBoxLayout" name="showMonth"/>
